--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -13,9 +13,9 @@
 }
 
 [saved-theme="dark"] {
-  --light: #2D2926FF !important;
-  --dark: #E94B3CFF !important;
-  --secondary: #F2AA4CFF !important;
+  --light: #25201D !important;
+  --dark: #F38EB1 !important;
+  --secondary: #1DD9C9 !important;
   --visited: #4a575e !important;
   --tertiary: #84a59d !important;
   --primary: #f58382 !important;
